# TokenLedger

./: .gitignore  CONTEXT.md  README.md  THIRD_PARTY_NOTICES.md  package-lock.json  package.json
.claude/: launch.json
.github/workflows/: release.yml
docs/adr/: 0001-canonical-exclusive-input-token-semantics.md  0002-cost-is-estimated-list-price-value-not-billed-spend.md  0003-price-resolution-litellm-then-openrouter.md  0004-no-source-adapter-trait.md  0005-resident-background-capture.md  0006-native-menu-not-webview-panel.md  0007-traypanel-webview-popover.md  0008-unattributed-usage-has-no-model.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
src/: App.css  App.test.tsx  App.tsx  api.ts  index.css  main.tsx  types.ts  windowDrag.test.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: db.rs  e2e_real_logs.rs  invariants.rs  lib.rs  main.rs  pricing.rs  queries.rs  scan.rs  settings.rs  time.rs  tray.rs  types.rs  updater.rs
src-tauri/src/adapters/: antigravity.rs  claude.rs  claude_ctx.rs  codex.rs  ctx.rs  exec_class.rs  gemini.rs  grok.rs  hermes.rs  mod.rs  pi.rs
src-tauri/src/adapters/fixtures/pi/: basic-session.jsonl
src-tauri/tests/fixtures/claude/projects/alpha/: session1.jsonl  session2.jsonl
src-tauri/tests/fixtures/claude/projects/beta/: session3.jsonl
src-tauri/tests/fixtures/codex/: rollout-fixture.jsonl
src/bindings/: BreakdownRow.ts  CatalogRates.ts  CtxBuckets.ts  CtxExecRow.ts  CtxResourceCount.ts  CtxToolRow.ts  Filters.ts  ModelPricing.ts  OverrideRates.ts  RatesPerTok.ts  ScanStatus.ts  SeriesPoint.ts  (+5 more)
(+110 files in other folders)
