[package]
name = "tokenledger"
version = "0.1.0"
description = "TokenLedger — AI usage tracker"
authors = ["Brian Wong"]
edition = "2021"

[lib]
name = "tokenledger_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
dirs = "5"
ureq = "2"
ts-rs = "10"

[dev-dependencies]
tempfile = "3"
